# AegisAgent

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  NOTICE  README.md  README_CN.md  ai_agent_framework_v2_5_full.md  ai_agent_framework_v3_optimized.md  config.json  pyproject.toml  requirements.txt  run_demo.py  sandbox安全改造开发计划.md  代码边界问题审查文档.md  并行Explore-Agent可行性与实施计划.md  文档条款-代码行号对照矩阵.md  架构开发文档.md  架构开发文档_opt.md  项目需求实现矩阵.md
.agent-team/analyst/: TEAM.md
.agent-team/code-review/: TEAM.md
.agent-team/coder/: TEAM.md
.agent-team/research/: TEAM.md
.agent-team/reviewer/: TEAM.md
.github/workflows/: ci.yml  release.yml
.skills/commit/: SKILL.md
.skills/explain-code/: SKILL.md
.skills/review-pr/: SKILL.md
.skills/spec-dev/: SKILL.md
.skills/spec-driven-dev/: SKILL.md
.tasks/: task_1.json  task_2.json  task_3.json  task_4.json  task_5.json  tasks.json
agent_framework/: __init__.py  __main__.py  cli.py  entry.py  graph_runner.py  main.py  terminal_runtime.py  textual_cli.py
agent_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent_framework/agent/: __init__.py  base_agent.py  block_chunker.py  capability_policy.py  commit_sequencer.py  coordinator.py  default_agent.py  definition.py  identity.py  loop.py  message_projector.py  orchestrator_agent.py  plan_mode.py  policy_engine.py  progress_summarizer.py  prompt_templates.py  react_agent.py  run_dispatcher.py  run_policy.py  run_state.py  runtime_deps.py  (+3 more)
config/: anthropic.json  collection_batch.json  collection_hybrid.json  collection_sequential.json  custom.json  deepseek.json  doubao.example.json  doubao.json  full.json  google.json  graph_conditional.json  graph_example.json  minimax.json  openai.json  qwen.json  reference.json  zhipu.json
data/: memories.db
demo/: react-agent-workflow.md  react-agent流程.md  react_agent_flow.md  react_agent流程.md
docs/: CLAUDE.md  agent-termination-conditions.md  agent_team_alignment_plan.md  agent_team_gap_analysis.md  agent_team_protocol_spec.md  context-compression-dataflow.md  context-kv-cache-architecture.md  context_engineering_alignment_plan.md  context_engineering_spec.md  long-lived-subagent.md  oc-migration-analysis.md  prompt_architecture.md  react-agent-loop.md  release-notes-v0.1.0.md  sdk-build-and-release.md  task-system.md  tutorial.md  主子agent长时交互.md  主子agent长时交互边界问题.md
examples/: a2a_delegation.py  custom_memory_manager.py  custom_memory_store.py  mcp_agent.py  multi_agent_demo.py  react_agent_reference.py  simple_agent.py  spawn_parallel.py
scripts/: test_team_at_compliance.py  test_team_auto_notify.py  test_team_auto_report.py  test_team_dataflow_strict.py  test_team_discovery.py  test_team_discovery_modes.py  test_team_e2e_real.py  test_team_final.py  test_team_full.py  test_team_identity.py  test_team_live.py  test_team_modes.py  test_team_monitor.py  test_team_new_features_llm.py  test_team_real_spawn.py  test_team_v2.py  test_tool_visibility.py  test_v5_phase1.py
sdk/: README.md  pyproject.toml
tests/: a2a_test_server.py  mcp_test_server.py  test_a2a_discovery_cache.py  test_agent.py  test_agent_bus.py  test_agent_definitions.py  test_agent_team_e2e.py  test_architecture_guard.py  test_background.py  test_backpressure.py  test_builtin_tools.py  test_cache_control.py  test_capability_unification.py  test_checkpoint.py  test_code_tools.py  test_collection_matrix.py  test_collection_strategy.py  test_concurrency_partitioner.py  test_context.py  test_context_auto_compact.py  test_context_engineering_ce.py  test_cron_daemon.py  test_deferred_tools.py  test_dynamic_pool.py  test_file_skills.py  test_fork_spawn.py  test_gemini_features.py  test_graph.py  test_graph_advanced.py  test_graph_runner.py  test_hooks.py  test_infra.py  test_integration.py  test_long_interaction.py  test_long_lived.py  test_main_entry.py  test_memory.py  test_memory_consolidation.py  test_model_adapters.py  test_multimodal.py  (+35 more)
需求文档/: AgentBus 控制总线设计文档.md
(+209 files in other folders)
