[project]
name = "agent-framework"
version = "0.1.0"
description = "AI Agent Framework - offline-first, extensible agent runtime"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=23.0",
    "blinker>=1.6",
    "litellm>=1.0",
    "textual>=0.59",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
tiktoken = [
    "tiktoken>=0.5",
]
openai = [
    "openai>=1.0",
    "tiktoken>=0.5",
]
anthropic = [
    "anthropic>=0.40",
]
google = [
    "google-genai>=1.0",
]
mcp = [
    "mcp>=1.0",
]
a2a = [
    "a2a-sdk>=0.2.8,<1.0",
]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]
all = [
    "litellm>=1.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "tiktoken>=0.5",
    "mcp>=1.0",
    "a2a-sdk>=0.2.8,<1.0",
]

[project.scripts]
agent-cli = "agent_framework.cli:main"
agent-interactive = "agent_framework.main:main"
agent-ide = "agent_framework.ide.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_framework*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# ── SDK standalone marker ──────────────────────────────────
# The SDK is usable as a sub-package: from agent_framework.sdk import AgentSDK
# For standalone distribution, build with: python -m build sdk/
# See sdk/pyproject.toml for the lightweight SDK-only package.
